cabal-version:      3.4
name:               cograph
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ana Pantilie
maintainer:         ana.pantilie95@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Coinductive.Graph
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base ^>=4.18.3.0
        , containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cograph-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        cograph
